[gd_scene load_steps=8 format=3 uid="uid://cmdbaawsepdng"]

[ext_resource type="Texture2D" uid="uid://qh408yhat8gr" path="res://Images/land.png" id="1_7w7ej"]
[ext_resource type="Script" path="res://Entity/Land/Land.gd" id="1_16pad"]
[ext_resource type="Texture2D" uid="uid://dd5xxbfo7itht" path="res://Images/HumanGrowing.png" id="2_h0ckp"]

[sub_resource type="Animation" id="Animation_iek33"]
resource_name = "Grow"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HumanGrowing:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HumanGrowing:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_uerbp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HumanGrowing:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HumanGrowing:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lk3b4"]
_data = {
"Grow": SubResource("Animation_iek33"),
"RESET": SubResource("Animation_uerbp")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ph01h"]
radius = 8.0
height = 16.0

[node name="Land" type="Node2D"]
script = ExtResource("1_16pad")

[node name="Land" type="Sprite2D" parent="."]
texture = ExtResource("1_7w7ej")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lk3b4")
}

[node name="HumanGrowing" type="Sprite2D" parent="."]
visible = false
position = Vector2(21, -27)
texture = ExtResource("2_h0ckp")
centered = false
hframes = 3

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ClickArea"]
polygon = PackedVector2Array(1, 24, 1, 8, 5, 1, 27, 1, 78, 1, 83, 9, 83, 25, 3, 25)

[node name="HeadGrabArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadGrabArea"]
position = Vector2(40, -9)
shape = SubResource("CapsuleShape2D_ph01h")

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_click_area_mouse_exited"]
[connection signal="mouse_entered" from="HeadGrabArea" to="." method="_on_head_grab_area_mouse_entered"]
[connection signal="mouse_exited" from="HeadGrabArea" to="." method="_on_head_grab_area_mouse_exited"]
